ex1/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  ports:
  - name: main
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
