ex1/templates/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
    name: nginx
    annotations:
        http.port: "443"
spec:
    backend:
        serviceName: nginx
        servicePort: 80
